# Anan

./: LICENSE  README.md  download_bge_model.py  gradle.properties  local.properties  settings.gradle.kts
anan/scr/main/java/com/example/anan/: MainActivity.kt
anan/scr/main/java/com/example/anan/model/: NativeLLMModel.kt
anan/scr/main/java/com/example/anan/repository/: ChatRepository.kt  VectorIndex.kt
anan/scr/main/java/com/example/anan/ui/components/: LoadingState.kt
anan/scr/main/java/com/example/anan/utils/: WordDocumentParser.kt
anan/scr/main/java/com/example/anan/viewmodel/: ChatViewModel.kt  FolderViewModel.kt  TranslationViewModel.kt
app/: build.gradle.kts  proguard-rules.pro
app/scr/androidTest/java/com/example/anan/: ExampleInstrumentedTest.java
app/scr/main/: AndroidManifest.xml
app/scr/main/assets/models/: READ.md
app/scr/main/cpp/: CMakeLists.txt  native-lib.cpp
app/scr/main/java/com/example/anan/data/: AIProfile.kt  Message.kt
app/scr/main/java/com/example/anan/model/: KnowledgeFolder.kt  LLMModel.kt
app/scr/main/java/com/example/anan/navigation/: AppNavigation.kt
app/scr/main/java/com/example/anan/repository/: KnowledgeBase.kt  VectorKnowledgeBase.kt
app/scr/main/java/com/example/anan/ui/: ChatScreen.kt
app/scr/main/java/com/example/anan/utils/: EmbeddingHelper.kt  ModelManager.kt
app/scr/main/res/values/: colors.xml  strings.xml  themes.xml
app/scr/main/res/values-night/: themes.xml
app/scr/test/java/com/example/anan/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+8 files in other folders)
